--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "private": true,
   "name": "vrc-osc-controller",
+  "productName": "vrc-osc-controller",
   "description": "An application that sends OSC commands to VRChat",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "labthe3rd <labthe3rd@gmail.com>",
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
     "build": "nextron build",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "packager": "electron-packager ./ --platform=win32"
   },
   "dependencies": {
+    "electron-packager": "^17.1.2",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0"
   },
@@ -19,6 +22,8 @@
     "autoprefixer": "^10.4.16",
     "electron": "^26.2.2",
     "electron-builder": "^24.6.4",
+    "electron-prompt": "^1.7.0",
+    "fs": "^0.0.1-security",
     "he": "^1.2.0",
     "next": "^12.3.4",
     "nextron": "^8.12.0",
